# haskell-learning-log

./: LICENSE  README.md  applicative-functors.md  maybe.md  monads.md
Code/FFI/Example1/: Example1.cabal  stack.yaml
Code/FFI/Example1/src/: Main.hs
Code/Haskellbook/: BTree.hs  Cipher.hs  Combinatorial.hs  Constructing.hs  DataProc.hs  DeconstructValues.hs  Either.hs  Folds.hs  Hutton.hs  Kinds.hs  Linguists.hs  Maybe.hs  Nat.hs  Phone.hs  Record.hs  Standard.hs  Subsequence.hs  Sum.hs  Unfold.hs  Vehicles.hs  Vigenere.hs  arith3broken.hs  broken1.hs  ch10.10ex1.hs  stack.yaml  toupper.hs
Code/Haskellbook/Addition/: Addition.cabal
Code/Haskellbook/Addition/src/: Addition.hs  Main.hs
Code/Haskellbook/Applicatives/: Applicatives.cabal
Code/Haskellbook/Applicatives/src/: Apl1.hs  BadMonoid.hs  Combinatorial.hs  ListAp.hs  Main.hs  ZipList.hs
Code/Haskellbook/ComposeTypes/: ComposeTypes.cabal
Code/Haskellbook/ComposeTypes/src/: Compose.hs  EitherT.hs  IdentityT.hs  MaybeT.hs  ReaderT.hs  StateT.hs
Code/Haskellbook/Foldable/: Foldable.cabal
Code/Haskellbook/Foldable/src/: Constant.hs  Identity.hs  List.hs  Main.hs  Optional.hs  S.hs  Three.hs  Tree.hs
Code/Haskellbook/Monads/: LICENSE  Monads.cabal
Code/Haskellbook/Monads/src/: Cow.hs  Main.hs
Code/Haskellbook/Reader/: Reader.cabal
Code/Haskellbook/Reader/src/: Char.hs  Functions.hs  Main.hs  Person.hs  Reader.hs  ReaderPractice.hs
Code/Haskellbook/Semigroups/: Semigroups.cabal
Code/Haskellbook/Semigroups/src/: AccumulateBoth.hs  AccumulateRight.hs  BoolConj.hs  BoolDisj.hs  Combine.hs  Constant.hs  Four.hs  Identity.hs  Mem.hs  Or.hs  Pair.hs  Person.hs  Three.hs  Trivial.hs  Two.hs  Validation.hs
Code/Haskellbook/Semigroups/tests/: tests.hs
Code/Haskellbook/State/: State.cabal
Code/Haskellbook/State/src/: FizzBuzz.hs  Main.hs  RandomExample1.hs  State.hs
Code/Haskellbook/catchall/: catchall.cabal
Code/Haskellbook/catchall/src/: CoArbitrary.hs  Fractions.hs  Functors.hs  LearnParsers.hs  MainMorse.hs  Morse.hs  Optional.hs
Code/Haskellbook/catchall/tests/: tests.hs
Code/Haskellbook/cipher/: cipher.cabal
Code/Haskellbook/hangman/: hangman.cabal
Code/Haskellbook/hangman/src/: Main.hs
Code/SimpleUdpServer/: README.md  SimpleUdpServer.cabal
Code/SimpleUdpServer/src/: Main.hs
Code/SyslogClient/: README.md  SyslogClient.cabal
Code/SyslogClient/src/: Main.hs  SyslogTypes.hs
Code/SyslogServer/: README.md  SyslogServer.cabal
Code/SyslogServer/src/: Main.hs
Code/SyslogTcpServer/: README.md  SyslogTcpServer.cabal
Code/callstack/: callstack.cabal
Code/callstack/src/: Main.hs
Code/turtle/: awk.hs  cat.hs  die.hs  echo.hs  echo2.hs  grep.hs  input.hs  interactive-echo.hs  interactive-ls.hs  ls-fold.hs  ls-raw.hs  ls.hs  sed.hs  select-ls.hs  select.hs  shell.hs  shellcase.hs  shellcase2.hs  tmpdir.hs  vars.hs
code/lens/: 1.hs  2.hs  LICENSE  lens-examples.cabal
code/lens/src/: Lib.hs
code/parallel/ch1-eval/: ch1-eval.cabal
code/parallel/ch1-eval/app/: Main.hs
code/parallel/ch1-eval/src/: Lib.hs
code/parallel/stm01/: stm01.cabal
code/parallel/stm01/app/: Main.hs
code/rwh/ch16/: csv1.hs
code/servant/: LICENSE  servant-example.cabal  stack.yaml
code/servant/app/: Main.hs
code/servant/src/: ApiType.hs  Server.hs
code/tpl-haskell/: tpl-haskell.cabal
code/tpl-haskell/src/: CustomShow.hs  Fib.hs  Lib.hs  MakeClassyConstraints.hs  MakeClassySubclassing.hs  Primes.hs
