name:                SyslogClient
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/JoshuaGross/SyslogClient#readme
license:             BSD3
license-file:        LICENSE
author:              Joshua Gross
maintainer:          joshua.gross@gmail.com
copyright:           Copyright 2015 Joshua Gross
category:            human
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable SyslogClient
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , random
                     , network
