name:                lens-examples
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/JoshuaGross/lens-examples#readme
license:             BSD3
license-file:        LICENSE
author:              Joshua Gross
maintainer:          joshua.gross@gmail.com
copyright:           Copyright 2015 Joshua Gross
category:            human
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , lens
  default-language:    Haskell2010

executable lens-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lens-examples
  default-language:    Haskell2010

test-suite lens-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lens-examples
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JoshuaGross/lens
