name:                servant-example
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/JoshuaGross/servant#readme
license:             BSD3
license-file:        LICENSE
author:              Joshua Gross
maintainer:          joshua.gross@gmail.com
copyright:           Copyright 2015 Joshua Gross
category:            human
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Server
  build-depends:       base >= 4.7 && < 5
                     , servant >= 0.4.4.6
                     , attoparsec
                     , aeson >= 0.10
                     , blaze
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , directory
                     , either
                     , http-client > 0.4 && < 0.5
                     , http-media
                     , lucid
                     , mtl
                     , servant-lucid
                     , servant-server
                     , string-conversions
                     , text
                     , time
                     , transformers
                     , transformers-compat
                     , wai
  default-language:    Haskell2010

executable servant-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-example
                     , warp
  default-language:    Haskell2010

test-suite servant-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JoshuaGross/servant
