name:                Monads
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/JoshuaGross/Monads#readme
license:             BSD3
license-file:        LICENSE
author:              Joshua Gross
maintainer:          joshua.gross@gmail.com
copyright:           Copyright 2015 Joshua Gross
category:            human
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Cow
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >=4.7 && <5
                     , containers
                     , QuickCheck
                     , semigroups
                     , checkers
  hs-source-dirs:      src
  default-language:    Haskell2010

executable Monads
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
