name:                Semigroups
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/JoshuaGross/Semigroups#readme
license:             BSD3
license-file:        LICENSE
author:              Joshua Gross
maintainer:          joshua.gross@gmail.com
copyright:           Copyright 2015 Joshua Gross
category:            human
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Trivial
                     , Identity
                     , Two
                     , Three
                     , Four
                     , BoolConj
                     , BoolDisj
                     , Or
                     , Combine
                     , Validation
                     , AccumulateRight
                     , AccumulateBoth
                     , Mem
                     , Pair
                     , Constant
                     , Person
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >=4.7 && <5
                     , containers
                     , QuickCheck
                     , semigroups
                     , checkers
  hs-source-dirs:      src
  default-language:    Haskell2010

executable Semigroups
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

test-suite tests
  ghc-options: -Wall -fno-warn-orphans
  type: exitcode-stdio-1.0
  main-is: tests.hs
  hs-source-dirs: tests
  build-depends:       base
                     , QuickCheck
                     , Semigroups
                     , checkers
  default-language:    Haskell2010
