name:                catchall
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/JoshuaGross/catchall#readme
license:             BSD3
license-file:        LICENSE
author:              Joshua Gross
maintainer:          joshua.gross@gmail.com
copyright:           Copyright 2015 Joshua Gross
category:            human
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Morse
                     , CoArbitrary
                     , Optional
                     , LearnParsers
                     , Fractions
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >=4.7 && <5
                     , containers
                     , QuickCheck
                     , trifecta
                     , raw-strings-qq
                     , attoparsec
                     , scotty
                     , hspec
                     , containers
                     , bytestring
                     , hedis
                     , mtl
                     , network-uri
                     , random
                     , scotty
                     , semigroups
                     , text
                     , transformers
                     , QuickCheck
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , trifecta
                     , raw-strings-qq
                     , attoparsec
                     , scotty
                     , criterion
  hs-source-dirs:      src
  default-language:    Haskell2010

executable catchall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , containers
                     , bytestring
                     , hedis
                     , mtl
                     , network-uri
                     , random
                     , scotty
                     , semigroups
                     , text
                     , transformers
                     , QuickCheck
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , trifecta
                     , raw-strings-qq
                     , attoparsec
                     , scotty
                     , aeson
                     , wreq
                     , criterion

executable morse
  hs-source-dirs:      src
  main-is:             MainMorse.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , containers
                     , bytestring
                     , hedis
                     , mtl
                     , network-uri
                     , random
                     , scotty
                     , semigroups
                     , text
                     , transformers
                     , QuickCheck
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , trifecta
                     , raw-strings-qq
                     , attoparsec
                     , scotty
                     , aeson
                     , wreq
                     , criterion

executable functors
  hs-source-dirs:      src
  main-is:             Functors.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , containers
                     , bytestring
                     , hedis
                     , mtl
                     , network-uri
                     , random
                     , scotty
                     , semigroups
                     , text
                     , transformers
                     , QuickCheck
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , trifecta
                     , raw-strings-qq
                     , scotty
                     , attoparsec
                     , aeson
                     , wreq
                     , criterion

test-suite tests
  ghc-options: -Wall -fno-warn-orphans
  type: exitcode-stdio-1.0
  main-is: tests.hs
  hs-source-dirs: tests
  build-depends:       base
                     , catchall
                     , containers
                     , QuickCheck
                     , trifecta
                     , raw-strings-qq
                     , attoparsec
                     , scotty
                     , aeson
                     , wreq
                     , criterion
  default-language:    Haskell2010
