name:                ch1-eval
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/JoshuaGross/ch1-eval#readme
license:             BSD3
license-file:        LICENSE
author:              Joshua Gross
maintainer:          joshua.gross@gmail.com
copyright:           Copyright 2015 Joshua Gross
category:            human
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , parallel
  default-language:    Haskell2010

executable ch1-eval-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ch1-eval
  default-language:    Haskell2010

test-suite ch1-eval-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ch1-eval
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JoshuaGross/ch1-eval
